JSAI/error/src/test/resources/base/notjslibrary_a013.js
var s1 = "t";
s1++;
print(s1);

var s2 = 5;
s2--;
print(s2);

var s3 = "g";
s3--;
print(s3);

var s4 = 8;
s4++;
print(s4)

var q = (s1 + "") + (s2 + "") + (s3 + "") + (s4 + "");
print(q);

